# myTeachings

./: .gitignore  .replit  README.md
.obsidian/: community-plugins.json  graph.json  workspace.json
1_3:preprocessor-0/src/: main.c
1_4:vectors/: README.md
2021Invierno_C/: Untitled Diagram.drawio
2022Primavera_Hs/: Makefile
2022Primavera_Hs/a_arithmetic/: example.hs  exampleLista.hs  lists6:3.hs
2022Primavera_Hs/b_statelist/: ExampleState.hs  StateFunctions.hs  jabberwocky.txt  scratchMonad.hs  tlotr_intro.txt
2022Primavera_Hs/c_ioworld/: ErrorEncapsulated.hs  helloIOWorld.hs  todo.txt
2022Primavera_Hs/f_treestruct/: Trees.hs
2022Verano_Py/: commands_linux.md  echo.py  script.py
2022Verano_Py/a_pyclis/: REFERENCES.md  echo.py  example.py  list.py  pytype.cfg  sub_shell.py
2022Verano_Py/c_pylangshell/: lispy.py  lispyv2.py
2023Bogota-ink_intro/: NOTES.md  README.md
2023Bogota-ink_intro/slides/: package.json  slides.md
2023Ibero-rust_intro/: DRAFT.md  OUTLINE.md  README.md  cwe_examples.rs  rust_cwe.md
2023Ibero-rust_intro/cwe_explain/: script.nu
2023Ibero-rust_intro/exercises/: Cargo.toml
2023Ibero-rust_intro/exercises/src/: lib.rs
2023Ibero-rust_intro/minibc/: Cargo.toml
2023Ibero-rust_intro/minibc/src/: lib.rs
2023Ibero-rust_intro/playground/: main.c  main.out
2023Ibero-rust_intro/slides/: package-lock.json  slides.md
CursoPrimaveral2022/: Makefile  StatePeano.hs  peano_num.hs
Excalidraw/: Drawing 2023-07-12 17.19.14.excalidraw.md
Primavera2022_HsPy/: Makefile  nix_topics.md  py_topics.md  rs_topics.md
Setups/: Makefile
(+126 files in other folders)
