[package]
name = "minibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.0"
crypto-hash = "0.3.4"
hex = "0.4.3"
termcolor = "1.2.0"
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"
